JavaFX Helpers 1.15.0
* Build with JDK 17
* MenuFactory: null menu items are ignored
* Maven wrapper